<resources>
    <string name="app_name">Word Generator</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_app_info">App-Info</string>
    <string name="alphabet_de">abcdefghijklmnopqrstuvwxyzüöäßABCDEFGHIJKLMNOPQRSTUVWXYZÜÖÄ</string>
    <string name="tv_required">* Pflichtfeld</string>
    <string name="et_hint_alphabet">Buchstaben *</string>
    <string name="et_hint_word_length">Wortlänge *</string>
    <string name="iv_description">Sprache</string>
    <string name="toast_quit_app">Nochmaliges Tippen beendet die App</string>
    <string name="toast_invalid_input">Prüfe deine Eingaben</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="toolbar_title_result">Wörter</string>
    <string name="progress_dialog_message">Bitte Warten...</string>
    <string name="et_error_alphabet">Gib Buchstaben an, aus denen die Wörter gebildet werden sollen.</string>
    <string name="et_error_word_size">Gib an, welche Länge die gebildeten Wörter haben sollen.</string>
    <string name="key_bundle_form_input_data">formInputData</string>

    <string-array name="results">
        <item>Ergebnis 1</item>
        <item>Ergebnis 2</item>
        <item>Ergebnis 3</item>
        <item>Ergebnis 4</item>
        <item>Ergebnis 5</item>
        <item>Ergebnis 6</item>
        <item>Ergebnis 7</item>
        <item>Ergebnis 8</item>
        <item>Ergebnis 9</item>
        <item>Ergebnis 10</item>
        <item>Ergebnis 11</item>
        <item>Ergebnis 12</item>
        <item>Ergebnis 13</item>
        <item>Ergebnis 14</item>
        <item>Ergebnis 15</item>
        <item>Ergebnis 16</item>
        <item>Ergebnis 17</item>
        <item>Ergebnis 18</item>
        <item>Ergebnis 19</item>
        <item>Ergebnis 20</item>
    </string-array>

    <!-- Einstellungen -->
    <string name="pref_title_dictionary">Wörterbuch</string>
    <string-array name="pref_dictionary_titles">
        <item>Deutsch</item>
    </string-array>
    <string-array name="pref_dictionary_values">
        <item>1</item>
    </string-array>
    <string name="pref_default_value_dictionary">1</string>

    <string name="pref_title_limit">Maximal anzuzeigende Wörter</string>
    <string-array name="pref_limit_titles">
        <item>50</item>
        <item>100</item>
        <item>500</item>
        <item>1000</item>
        <item>Kein Limit</item>
    </string-array>
    <string-array name="pref_limit_values">
        <item>50</item>
        <item>100</item>
        <item>500</item>
        <item>1000</item>
        <item>-1</item>
    </string-array>
    <string name="pref_default_value_limit">50</string>

    <!-- Info -->
    <string name="info_headline">Info</string>
    <string name="info_version">Version 1.0</string>
    <string name="info_copyright">© 2017 Benjamin Christiani</string>
    <string name="info_copyright_hint">Alle Rechte vorbehalten</string>
</resources>
