<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/pref_default_value_dictionary"
        android:entries="@array/pref_dictionary_titles"
        android:entryValues="@array/pref_dictionary_values"
        android:key="pref_dictionary"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_dictionary" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/pref_default_value_limit"
        android:entries="@array/pref_limit_titles"
        android:entryValues="@array/pref_limit_values"
        android:key="pref_limit"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_limit" />

</PreferenceScreen>
