<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.christiani.benjamin.wordgen.activities.InputActivity"
    tools:showIn="@layout/activity_input"
    android:orientation="vertical"
    android:padding="@dimen/linear_layout_padding"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/flag_height"
        android:src="@drawable/flag_de"
        android:contentDescription="@string/iv_description"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_alphabet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/text_input_layout_padding">
        <EditText
            android:id="@+id/et_alphabet"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:digits="@string/alphabet_de"
            android:hint="@string/et_hint_alphabet"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_word_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/text_input_layout_padding">
        <EditText
            android:id="@+id/et_word_size"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/et_hint_word_length" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_16"
        android:paddingStart="@dimen/padding_5"
        android:paddingEnd="@dimen/padding_5"
        android:paddingLeft="@dimen/padding_5"
        android:text="@string/tv_required"
        android:textColor="@color/colorGrey"/>
</LinearLayout>
